log/build_2025-02-21_16-03-41/scservo_driver/stderr.log
  File "/home/sunrise/scservo_ws/install/scservo_driver/lib/python3.10/site-packages/scservo_driver/track_to_obj_v3.py", line 73
    self.get_logger().info(  def __init__(self):
                             ^^^
SyntaxError: invalid syntax

  File "/home/sunrise/scservo_ws/install/scservo_driver/lib/python3.10/site-packages/scservo_driver/track_to_obj_v4.py", line 80
    self.get_logger().info(  def __init__(self):
                             ^^^
SyntaxError: invalid syntax

